# PcbDecompaction

./: .gitignore  .gitmodules  BBBC_bus.lp.sol  CMakeLists.txt  README.md  bm2_all.sol  bm2_net.sol  bm2_net_1.sol  bm2_net_2.sol  bm2_net_3.sol  bus.lp  bus.lp.sol  bus123.lp  bus123.lp.sol  bus12345.lp  cases  ddr.lp  ddr.lp.sol  ddr_bus.lp  ddr_bus.lp.sol  ddr_layer123.lp  ddr_layer123.lp.sol  output.ddr_bus.kicad_pcb  temp.lp  temp.lp.sol  temp_1.lp  temp_2.lp  tmp.lp.sol
UCSD_routing_result/: output.bestSolutionWithMerging_s_20_i_10_b_100.bm1.routed.kicad_pcb  output.bestSolutionWithMerging_s_20_i_10_b_20.bm13.routed.kicad_pcb  output.bestSolutionWithMerging_s_20_i_10_b_20.bm3.routed.kicad_pcb  output.bestSolutionWithMerging_s_20_i_10_b_20.bm5.routed.kicad_pcb  output.bestSolutionWithMerging_s_20_i_10_b_20.bm6.routed.kicad_pcb
src/: boundingBox.cpp  boundingBox.h  cbcSolver.cpp  cbcSolver.h  clpSolver.cpp  clpSolver.h  decompaction.cpp  decompaction.h  drc.cpp  drc.h  equation.h  gurobiSolver.cpp  gurobiSolver.h  main.cpp  main_demo.cpp  snacking.cpp  snacking.h  snaking.cpp  snaking.h
